--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "docs:build": "vuepress build docs"
   },
   "dependencies": {
-    "vuepress": "^1.8.2"
-  }
+    "vuepress": "^1.9.10"
+  },
+  "packageManager": "pnpm@10.22.0"
 }
